--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "http-proxy-middleware": "^0.17.3",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
